force-app/main/default/objects/Research_Paper__c/Research_Paper__c.object-meta.xml
<CustomObject>
    <description>Store basic Information Regarding Research Paper</description>
    <label>Research Paper</label>
    <nameField>
        <displayFormat>RP-{0000}</displayFormat>
        <label>Research Paper Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Research Papers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>