force-app/main/default/objects/Research_Paper__c/fields/Final_Decision__c.field-meta.xml
<CustomField>
    <fullName>Final_Decision__c</fullName>
    <label>Final Decision</label>
    <length>30</length>
    <type>Text</type>
</CustomField>