force-app/main/default/objects/Research_Paper__c/fields/Journal_Account__c.field-meta.xml
<CustomField>
    <fullName>Journal_Account__c</fullName>
    <label>Journal Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Research Papers</relationshipLabel>
    <relationshipName>Research_Papers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>