force-app/main/default/objects/Research_Paper__c/fields/Name_of_Primary_Author__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Primary_Author__c</fullName>
    <label>Name of Primary Author</label>
    <length>50</length>
    <type>Text</type>
</CustomField>