force-app/main/default/objects/Research_Paper__c/fields/Paper_Title__c.field-meta.xml
<CustomField>
    <fullName>Paper_Title__c</fullName>
    <description>Enter Paper Title</description>
    <label>Paper Title</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>