force-app/main/default/objects/Research_Paper__c/fields/Sub_Domain__c.field-meta.xml
<CustomField>
    <fullName>Sub_Domain__c</fullName>
    <description>Enter Sub Domain</description>
    <label>Sub Domain</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Image Processing</fullName>
            </value>
            <value>
                <fullName>VLSI</fullName>
            </value>
            <value>
                <fullName>Nano Technology</fullName>
            </value>
            <value>
                <fullName>DSP processor</fullName>
            </value>
            <value>
                <fullName>Microprocessor</fullName>
            </value>
            <value>
                <fullName>Bio Medical</fullName>
            </value>
            <value>
                <fullName>Bio Instrumentation</fullName>
            </value>
            <value>
                <fullName>Design Tech</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>